# serious-music-visualizer

./: .gitignore  CMakeLists.txt  README.md
dependencies/: CMakeLists.txt  tl.cmake
dependencies/miniaudio/: CMakeLists.txt
dependencies/miniaudio/include/miniaudio/: miniaudio.hpp
dependencies/miniaudio/src/: miniaudio.cpp
examples/: CMakeLists.txt
examples/src/: capture.cpp  loopback.cpp  sine_wave.cpp
include/audio/: context.hpp  data.hpp
include/sa/: audio.hpp  audio_context.hpp  audio_data.hpp  audio_data_debug_window.hpp  audio_device_controls.hpp  audio_inl.hpp
include/visualizer/: audio.hpp  render.hpp  scene.hpp
shaders/: flat.frag  flat.vert  music_visualizer.frag
src/: audio.cpp  main.cpp
src/audio/: context.cpp  data.cpp
src/sa/: audio_context.cpp  audio_data.cpp  audio_data_debug_window.cpp  audio_device_controls.cpp
src/visualizer/: audio.cpp  render.cpp  scene.cpp
